# square_solver

./: .gitignore  CMakeLists.txt  README.md  run_on_task.sh  task_generator.py
include/: args_parser.hpp  polynome.hpp  polynome_reader.hpp  solution.hpp  solver.hpp  value_reader.hpp
src/: args_parser.cpp  main.cpp
